--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,11 @@ footer {
   color: white;
 }
 
+#submitButton {
+  background-color: rgb(150, 201, 62);
+  color: white;
+}
+
 .fondoNavBar {
   background-color: rgb(53, 58, 64);
 }
@@ -57,6 +62,34 @@ footer {
 
 .fontOradorS {
   font-size: small;
+}
+
+.boxPlan {
+  width: 70%;
+}
+
+.boxSizeSmall {
+  font-size: small;
+}
+
+.buttonModifier {
+  margin: 1rem 0;
+  padding: 0.5rem 0;
+  width: 100%;
+  border-radius: 6px;
+}
+
+.buttonBIG {
+  height: 45px;
+}
+
+.form-control:disabled {
+  background-color: rgb(204, 229, 255) !important;
+  border: 1px solid rgb(184, 218, 255);
+}
+
+.form-control:disabled::placeholder {
+  color: rgb(0, 64, 165);
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1400px) {
